CarouselCard badge icon size increase on mobile. Fix for board stat badge vertical alignment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -99,6 +99,7 @@ body {
   justify-content: center;
   width: 40px;
   height: 40px;
+  line-height: 40px;
   font-weight: bold;
   font-size: 20px;
 }
@@ -129,6 +130,7 @@ body {
   justify-content: center;
   width: 30px;
   height: 30px;
+  line-height: 30px;
   font-size: 15px;
 }
 
